--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -5,7 +5,6 @@
 .header {
   position: relative;
   text-align: center;
-  height: 55vmax;
 }
 
 .header__image {
@@ -38,19 +37,11 @@
   .main__heading {
     font-size: 2rem;
   }
-
-  .header {
-    height: 50vmax;
-  }
 }
 @media only screen and (max-width: 790px) {
   .main__heading {
     font-size: 2rem;
     top: 3rem;
-  }
-
-  .header {
-    height: 50vmax;
   }
 }
 @media only screen and (max-width: 734px) {
@@ -63,10 +54,6 @@
   .main__heading {
     font-size: 1.2rem;
     top: 1rem;
-  }
-
-  .header {
-    height: 40vmax;
   }
 }
 @media (max-width: 480px) {
